--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="p-5 lg:absolute top-[10px] left-[10px] lg:top-[40px] lg:left-[110px] flex flex-col gap-3 ">
                     <h1 class="animate-pulse font-bold md:text-4xl text-2xl gap-2 md:leading-[50px] ">Pamper Your Pet, <br> Because They Deserve <br> the Best</h1>
                     <p class="text-xs text-slate-600 w-2/3 ">Discover a world of treats, toys, and essentials handpicked for your furry friends. Shop now and make tails wag with joy!</p>
-                    <button class="z-10 text-sm bg-color h-[25px] w-[90px] rounded-md">Find a pet</button>
+                    <button class="z-10 text-sm bg-color h-[25px] w-[90px] rounded-md hover:bg-box">Find a pet</button>
                 </div>
                 <img class=" lg:w-[1000px] w-full mt-4 lg:mt-[-30px] mt-[-50px] " src="/c1-assets/cat-big.png" alt="">
             </div>
@@ -105,11 +105,6 @@
                             <img class="bg-white rounded-full p-3 w-[50px]" src="/c1-assets/rabbit-cartoon.png" alt="">
                             <p class="font-bold">Rabbit</p>
                             <p class="text-xs font-medium">3 items</p>
-                        </div>
-                        <div class="gap-2 p-10 bg-box flex flex-col justify-center items-center justify-items-center rounded-lg">
-                            <img class="bg-white rounded-full p-3 w-[50px]" src="/c1-assets/eagle.jpeg" alt="">
-                            <p class="font-bold">Eagle</p>
-                            <p class="text-xs font-medium">4 items</p>
                         </div>
                     </div>
                 </div>
@@ -387,7 +382,7 @@
           </section>
         <!-- last section  -->
 
-          <section class="relative top-[200px] relative  lg:flex justify-center   mx-auto items-center  lg:w-auto w-[300px] lg:h-auto h-[430px]">
+          <section class="relative top-[200px] relative  lg:flex justify-center   mx-auto items-center  lg:w-auto w-[300px] lg:h-auto h-[430px] -mt-40">
             <div class="p-10 bg-goll lg:flex flex-row justify-evenly items-center justify-items-center">
                 <div class="lg:w-auto w-[180px]">
                     <img src="/c1-assets/cute-pet-small.png" alt="">
@@ -407,7 +402,7 @@
         <div class=" footer bg-box text-black p-10 lg:flex flex-row lg:justify-center  items-center lg:gap-[120px] lg:h-[380px] h-[600px]">
             <nav class=" relative md:flex flex-col md:top-[100px] top-[200px]">
                 <div class="flex flex-row items-center gap-3">
-                    <img class="w-8" src="/c1-assets/logo-footer.png" alt="">
+                    <img class="w-8 hover:bg-ani" src="/c1-assets/logo-footer.png" alt="">
                     <a class="link link-hover font-bold">Browse Pets</a>
                 </div>
               <div class="">
